# GW2Nexus-ArcDPSBridge

./: .gitignore  ArcdpsEventHandler.h  BridgeData.h  CMakeLists.txt  EventHandler.h  GW2Nexus-ArcDPSBridge.sln  GW2Nexus-ArcDPSBridge.vcxproj  GW2Nexus-ArcDPSBridge.vcxproj.filters  LICENSE  dllmain.cpp  main.cpp  vcpkg-configuration.json  vcpkg.json
.github/workflows/: cmake.yaml  msbuild.yml
src/: ArcDPS.h  entry.cpp
